--- a/lang/fr/pages.json
+++ b/lang/fr/pages.json
@@ -4,6 +4,11 @@
     "create_game": "Créer une partie"
   },
   "game": {
+    "unable_to_connect": {
+      "title": "Impossible de se connecter",
+      "explanation": "La partie a déjà commencé",
+      "back_home": "Retour à l'accueil"
+    },
     "is_playing": "{user} est en train de jouer...",
     "is_playing_but_afk": "C'est le tour de {user}, qui est déconnecté(e)..."
   }
