:lipstick: home page

--- a/lang/fr/pages.json
+++ b/lang/fr/pages.json
@@ -2,8 +2,9 @@
   "home": {
     "username": "Nom d'utilisateur",
     "create_game": "Créer une partie",
-    "join_game": "Rejoindre",
-    "code_join_game": "Code de la partie"
+    "join_game": "Rejoindre la partie",
+    "code_join_game": "Code de la partie",
+    "or": "Ou"
   },
   "game": {
     "unable_to_connect": {
