--- a/lang/fr/pages.json
+++ b/lang/fr/pages.json
@@ -12,7 +12,7 @@
       "explanation": "La partie a déjà commencé",
       "back_home": "Retour à l'accueil"
     },
-    "connected_usernames": "Utilisateurs connectés",
+    "connected_usernames": "{n} utilisateur connecté | {n} utilisateurs connectés",
     "is_playing": "{user} est en train de jouer...",
     "is_playing_but_afk": "C'est le tour de {user}, qui est déconnecté(e)..."
   }
