--- a/lang/fr/pages.json
+++ b/lang/fr/pages.json
@@ -1,25 +1,29 @@
 {
-  "home": {
-    "username": "Nom d'utilisateur",
-    "create_game": "Créer une partie",
-    "join_game": "Rejoindre la partie",
-    "code_join_game": "Code de la partie",
-    "or": "Ou"
-  },
-  "game": {
-    "unable_to_connect": {
-      "title": "Impossible de se connecter",
-      "explanation": "La partie a déjà commencé",
-      "back_home": "Retour à l'accueil"
+    "home": {
+        "username": "Nom d'utilisateur",
+        "create_game": "Créer une partie",
+        "join_game": "Rejoindre la partie",
+        "code_join_game": "Code de la partie",
+        "or": "Ou",
+        "see_rules": "Voir les règles du jeu"
     },
-    "ended": {
-      "title": "La partie est terminée !",
-      "winner": "{username} a gagné(e) !",
-      "back_home": "Retour à l'accueil"
+    "game": {
+        "unable_to_connect": {
+            "title": "Impossible de se connecter",
+            "explanation": "La partie a déjà commencé",
+            "back_home": "Retour à l'accueil"
+        },
+        "ended": {
+            "title": "La partie est terminée !",
+            "winner": "{username} a gagné(e) !",
+            "back_home": "Retour à l'accueil"
+        },
+        "connected_usernames": "{n} utilisateur connecté | {n} utilisateurs connectés",
+        "self_is_playing": "Vous êtes en train de jouer...",
+        "is_playing": "{user} est en train de jouer...",
+        "is_playing_but_afk": "C'est le tour de {user}, qui est déconnecté(e)..."
     },
-    "connected_usernames": "{n} utilisateur connecté | {n} utilisateurs connectés",
-    "self_is_playing": "Vous êtes en train de jouer...",
-    "is_playing": "{user} est en train de jouer...",
-    "is_playing_but_afk": "C'est le tour de {user}, qui est déconnecté(e)..."
-  }
+    "rules": {
+        "back_home": "Retour à l'accueil"
+    }
 }
