🚸 Make easier to know who is playing (#24)

--- a/lang/fr/pages.json
+++ b/lang/fr/pages.json
@@ -18,10 +18,9 @@
             "winner": "{username} a gagné(e) !",
             "back_home": "Retour à l'accueil"
         },
-        "connected_usernames": "{n} utilisateur connecté | {n} utilisateurs connectés",
-        "self_is_playing": "Vous êtes en train de jouer...",
-        "is_playing": "{user} est en train de jouer...",
-        "is_playing_but_afk": "C'est le tour de {user}, qui est déconnecté(e)..."
+        "connected_usernames": "{n} personne connecté | {n} personnes connectés",
+        "your_turn": "Votre tour",
+        "turn_of": "Tour de {username}"
     },
     "rules": {
         "back_home": "Retour à l'accueil"
