--- a/lang/fr/pages.json
+++ b/lang/fr/pages.json
@@ -1,28 +1,32 @@
 {
-  "home": {
-    "username": "Nom d'utilisateur",
-    "create_game": "Créer une partie",
-    "join_game": "Rejoindre la partie",
-    "code_join_game": "Code de la partie",
-    "or": "Ou",
-    "see_rules": "Voir les règles du jeu"
-  },
-  "game": {
-    "unable_to_connect": {
-      "title": "Impossible de se connecter",
-      "explanation": "La partie a déjà commencé",
-      "back_home": "Retour à l'accueil"
+    "home": {
+        "username": "Nom d'utilisateur",
+        "create_game": "Créer une partie",
+        "join_game": "Rejoindre la partie",
+        "code_join_game": "Code de la partie",
+        "or": "Ou",
+        "see_rules": "Voir les règles du jeu"
     },
-    "ended": {
-      "title": "Partie terminée",
-      "winner": "{username} a gagné(e) !",
-      "back_home": "Retour à l'accueil"
+    "game": {
+        "start": "Démarrer la partie",
+        "waiting_for_players": "En attente d'un autre joueur pour commencer",
+        "invite_friends": "Code pour rejoindre la partie : {code}",
+        "waiting_for_host": "En attente que l'hôte démarre la partie",
+        "unable_to_connect": {
+            "title": "Impossible de se connecter",
+            "explanation": "La partie a déjà commencé",
+            "back_home": "Retour à l'accueil"
+        },
+        "ended": {
+            "title": "Partie terminée",
+            "winner": "{username} a gagné(e) !",
+            "back_home": "Retour à l'accueil"
+        },
+        "connected_usernames": "{n} personne connectée | {n} personnes connectées",
+        "your_turn": "Votre tour",
+        "turn_of": "Tour de {username}"
     },
-    "connected_usernames": "{n} personne connecté | {n} personnes connectés",
-    "your_turn": "Votre tour",
-    "turn_of": "Tour de {username}"
-  },
-  "rules": {
-    "back_home": "Retour à l'accueil"
-  }
+    "rules": {
+        "back_home": "Retour à l'accueil"
+    }
 }
